--- a/admin.html
+++ b/admin.html
@@ -3,86 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Management</title>
+    <title>Project Manager</title>
+    <!-- CSS styles are embedded here -->
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f9;
+            line-height: 1.6;
+            background-color: #f4f4f4;
             color: #333;
+            padding: 20px;
+            margin: 0;
         }
-        #project-form {
+        .container {
+            max-width: 800px;
+            margin: auto;
             background: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
         }
-        #project-form input[type="text"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 4px;
-            border: 1px solid #ddd;
+        h1, h2 {
+            color: #333;
         }
-        #project-form button {
+        input[type="text"], button {
             width: 100%;
-            padding: 10px;
-            border: none;
+            padding: 12px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            box-sizing: border-box; /* To include padding in the width */
+        }
+        button {
             background-color: #007bff;
             color: white;
-            border-radius: 4px;
+            border: none;
             cursor: pointer;
             font-size: 16px;
         }
-        #project-form button:hover {
+        button:hover {
             background-color: #0056b3;
         }
-        #projects-list {
-            list-style: none;
-            padding: 0;
-        }
-        #projects-list li {
-            background: #fff;
+        .project {
+            background: #f9f9f9;
             padding: 15px;
-            border-radius: 8px;
             margin-bottom: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 5px;
+            border: 1px solid #eee;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
-        #projects-list li a {
-            text-decoration: none;
-            color: #007bff;
+        .project-details {
+            flex-grow: 1;
         }
-        #projects-list li button {
+        .project-actions button {
             margin-left: 10px;
-            padding: 5px 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+            padding: 8px 12px;
+            width: auto;
         }
         .edit-btn {
-            background-color: #ffc107;
-            color: #333;
+            background-color: #28a745;
+        }
+        .edit-btn:hover {
+            background-color: #218838;
+        }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 8px;
+        }
+        .close-btn {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close-btn:hover,
+        .close-btn:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <h1>Project Management</h1>
+    <div class="container">
+        <h1>My Projects</h1>
 
-    <div id="project-form">
-        <input type="hidden" id="projectId">
-        <input type="text" id="projectName" placeholder="Project Name" required>
-        <input type="text" id="driveLink" placeholder="Google Drive Link" required>
-        <button onclick="addOrUpdateProject()">Save Project</button>
+        <!-- Form to Add a New Project -->
+        <div id="project-form">
+            <h2>Create a New Project</h2>
+            <input type="text" id="projectName" placeholder="Project Name" required>
+            <input type="text" id="driveLink" placeholder="Google Drive Link" required>
+            <button onclick="createProject()">Add Project</button>
+        </div>
+
+        <!-- List of Projects -->
+        <div id="projects-list">
+            <h2>All Projects</h2>
+            <div id="projects-container"></div>
+        </div>
     </div>
 
-    <ul id="projects-list"></ul>
+    <!-- Edit Project Modal -->
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeEditModal()">&times;</span>
+            <h2>Edit Project</h2>
+            <input type="hidden" id="edit-id">
+            <input type="text" id="edit-projectName" placeholder="Project Name">
+            <input type="text" id="edit-driveLink" placeholder="Google Drive Link">
+            <button onclick="updateProject()">Save Changes</button>
+        </div>
+    </div>
 
-    <script type="module">
+    <!-- Firebase SDK Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+
+    <!-- JavaScript logic is embedded here -->
+    <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
           apiKey: "AIzaSyB-u3L7Jz3gEfXmfP7-XQfPnI2CwpJM_Vs",
@@ -94,69 +151,104 @@
           measurementId: "G-B211571YB4"
         };
 
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-
         // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        const projectsCollection = db.collection('projects');
 
-        const projectsCollection = collection(db, "projects");
-
-        // Function to render projects
-        const renderProjects = (projects) => {
-            const projectsList = document.getElementById('projects-list');
-            projectsList.innerHTML = '';
-            projects.forEach(project => {
-                const li = document.createElement('li');
-                li.innerHTML = `
-                    <a href="${project.data().driveLink}" target="_blank">${project.data().name}</a>
-                    <button class="edit-btn" onclick="editProject('${project.id}', '${project.data().name}', '${project.data().driveLink}')">Edit</button>
-                `;
-                projectsList.appendChild(li);
-            });
-        };
-
-        // Real-time listener for projects
-        onSnapshot(projectsCollection, (snapshot) => {
-            renderProjects(snapshot.docs);
-        });
-
-        // Function to add or update a project
-        window.addOrUpdateProject = async () => {
-            const projectId = document.getElementById('projectId').value;
+        // Function to create a new project
+        function createProject() {
             const projectName = document.getElementById('projectName').value;
             const driveLink = document.getElementById('driveLink').value;
 
             if (projectName && driveLink) {
-                if (projectId) {
-                    // Update existing project
-                    const projectDoc = doc(db, "projects", projectId);
-                    await updateDoc(projectDoc, {
-                        name: projectName,
-                        driveLink: driveLink
-                    });
-                } else {
-                    // Add new project
-                    await addDoc(projectsCollection, {
-                        name: projectName,
-                        driveLink: driveLink
-                    });
-                }
-                document.getElementById('projectId').value = '';
-                document.getElementById('projectName').value = '';
-                document.getElementById('driveLink').value = '';
+                projectsCollection.add({
+                    name: projectName,
+                    link: driveLink,
+                    createdAt: firebase.firestore.FieldValue.serverTimestamp()
+                })
+                .then(() => {
+                    console.log("Project added!");
+                    document.getElementById('projectName').value = '';
+                    document.getElementById('driveLink').value = '';
+                })
+                .catch(error => console.error("Error adding project: ", error));
+            } else {
+                alert('Please fill in both fields.');
             }
-        };
+        }
 
-        // Function to populate form for editing
-        window.editProject = (id, name, link) => {
-            document.getElementById('projectId').value = id;
-            document.getElementById('projectName').value = name;
-            document.getElementById('driveLink').value = link;
-        };
+        // Function to display projects
+        function displayProjects(projects) {
+            const projectsContainer = document.getElementById('projects-container');
+            projectsContainer.innerHTML = '';
+            projects.forEach(project => {
+                const projectDiv = document.createElement('div');
+                projectDiv.className = 'project';
+                projectDiv.innerHTML = `
+                    <div class="project-details">
+                        <strong>${project.name}</strong><br>
+                        <a href="${project.link}" target="_blank">Google Drive Link</a>
+                    </div>
+                    <div class="project-actions">
+                        <button class="edit-btn" onclick="openEditModal('${project.id}', '${project.name}', '${project.link}')">Edit</button>
+                    </div>
+                `;
+                projectsContainer.appendChild(projectDiv);
+            });
+        }
+
+        // Real-time listener for projects
+        projectsCollection.orderBy('createdAt', 'desc').onSnapshot(snapshot => {
+            let projects = [];
+            snapshot.forEach(doc => {
+                projects.push({ id: doc.id, ...doc.data() });
+            });
+            displayProjects(projects);
+        }, error => {
+            console.error("Error fetching projects: ", error);
+        });
+        
+        // Functions to handle the edit modal
+        const modal = document.getElementById('edit-modal');
+        function openEditModal(id, name, link) {
+            document.getElementById('edit-id').value = id;
+            document.getElementById('edit-projectName').value = name;
+            document.getElementById('edit-driveLink').value = link;
+            modal.style.display = 'block';
+        }
+
+        function closeEditModal() {
+            modal.style.display = 'none';
+        }
+        
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                closeEditModal();
+            }
+        }
+
+        // Function to update a project
+        function updateProject() {
+            const id = document.getElementById('edit-id').value;
+            const updatedName = document.getElementById('edit-projectName').value;
+            const updatedLink = document.getElementById('edit-driveLink').value;
+
+            if (id && updatedName && updatedLink) {
+                projectsCollection.doc(id).update({
+                    name: updatedName,
+                    link: updatedLink
+                })
+                .then(() => {
+                    console.log("Project updated!");
+                    closeEditModal();
+                })
+                .catch(error => console.error("Error updating project: ", error));
+            } else {
+                alert('Please fill in all fields.');
+            }
+        }
+
     </script>
-
 </body>
 </html>
