--- a/project.html
+++ b/project.html
@@ -11,16 +11,16 @@
         /* --- General Styling --- */
         body {
             background-color: #FFF8ED;
-            /* Using Satoshi as the primary font, falling back to sans-serif */
             font-family: 'Satoshi', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            padding: 100px 0; /* Add padding for top/bottom content */
+            padding: 100px 0; /* Desktop vertical padding */
             overflow-x: hidden;
             color: #1E2024;
+            box-sizing: border-box;
         }
 
         /* --- Main Wrapper for All Content --- */
@@ -28,9 +28,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 40px; /* Space between header, carousel, and footer */
+            gap: 40px;
             width: 100%;
-            max-width: 1200px; /* Controls the width of header/footer content */
+            max-width: 1200px;
             padding: 0 20px;
             box-sizing: border-box;
         }
@@ -53,7 +53,6 @@
             color: #131517;
         }
 
-        /* Styling for the serif part of the headline */
         header h1 .serif {
             font-family: 'Merriweather', serif;
             font-weight: 400;
@@ -84,7 +83,7 @@
         }
 
 
-        /* --- Carousel Container (UNCHANGED) --- */
+        /* --- Carousel Container (Desktop) --- */
         .carousel-container {
             width: 1600px;
             height: 500px;
@@ -117,8 +116,7 @@
             transform-origin: center;
             transform: translateX(-50%);
         }
-        
-        /* Positioning each image pair in a circle */
+
         .image-container:nth-child(1) { transform: translateX(-50%) rotateY(30deg); }
         .image-container:nth-child(2) { transform: translateX(-50%) rotateY(60deg); }
         .image-container:nth-child(3) { transform: translateX(-50%) rotateY(90deg); }
@@ -147,7 +145,7 @@
 
         .content-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr); /* Three columns on desktop */
+            grid-template-columns: repeat(3, 1fr);
             gap: 40px;
             width: 100%;
         }
@@ -160,24 +158,13 @@
             padding: 0 20px;
         }
 
-        /* Add borders to the middle card */
         .card.middle {
             border-left: 1px solid rgba(0, 0, 0, 0.1);
             border-right: 1px solid rgba(0, 0, 0, 0.1);
         }
 
-        .card h6 {
-            font-size: 20px;
-            font-weight: 500;
-            margin: 0;
-        }
-
-        .card p {
-            font-size: 14px; /* Adjusted from 12px for better readability */
-            line-height: 1.6;
-            opacity: 0.6;
-            margin: 0;
-        }
+        .card h6 { font-size: 20px; font-weight: 500; margin: 0; }
+        .card p { font-size: 14px; line-height: 1.6; opacity: 0.6; margin: 0; }
 
 
         /* --- Responsive Adjustments --- */
@@ -201,7 +188,16 @@
 
         @media (max-width: 768px) { /* Mobile */
             body {
+                /* Reduce overall vertical padding on mobile */
                 padding: 40px 0;
+            }
+            .main-wrapper {
+                /* Remove gap to use margin for precise control */
+                gap: 0;
+            }
+            header {
+                /* Create space below the header */
+                margin-bottom: 30px;
             }
             header h1 {
                 font-size: 40px;
@@ -211,25 +207,32 @@
             }
             
             .carousel-container {
-                height: 400px;
+                /* MODIFIED: Reduce height to tightly fit the 300px tall images */
+                height: 310px;
                 perspective: 400px;
+                 /* Create space below the carousel */
+                margin-bottom: 30px;
             }
             .image-container {
                 width: 1000px;
-                height: 300px;
-                top: 50px;
+                height: 300px; /* Image height */
+                /* MODIFIED: Recalculate top for the new container height: (310 - 300) / 2 = 5px */
+                top: 5px;
             }
             .image-container img {
                 width: 200px;
                 height: 300px;
             }
 
+            footer {
+                /* Remove top padding, margin from carousel now handles the space */
+                padding-top: 0;
+            }
             .content-grid {
-                grid-template-columns: 1fr; /* Stack cards vertically */
+                grid-template-columns: 1fr;
                 gap: 40px;
             }
             .card.middle {
-                /* Change borders for stacked layout */
                 border-left: none;
                 border-right: none;
                 border-top: 1px solid rgba(0, 0, 0, 0.1);
