--- a/project.html
+++ b/project.html
@@ -938,7 +938,7 @@
         <div class="hero-header">
             <div class="logo-text">HV PHOTOGRAPHY</div>
             <h1>
-                Capturing Your <span class="serif">Timeless</span> Moments ❤️
+                Capturing Your <span class="serif">Timeless</span> Moments
             </h1>
             <p class="subheading">
                 Professional photography services for weddings, portraits, and commercial projects. 
